--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>CodePen - Getting Bootstrap</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./css/style.css">
-
+<div>
+   <a href="https://kadotaterry.github.io/WebDevProject.github.io/">Click here to get back home.</a>
+      </div>
 </head>
 <body>
 <!-- partial:index.partial.html -->
