--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <footer class="container">
   <p>&copy; Company 2017-2019</p>
   <div>
-   <a href="https://kadotaterry.github.io/WebDevProject.github.io/">Click here to get back home.</a>
+   <a href="https://kadotaterry.github.io/WebDevProject.github.io/">Click here to get back to the portfolio project!</a>
       </div>
 </footer>
 <!-- partial -->
